--- a/4.ipynb
+++ b/4.ipynb
@@ -182,7 +182,9 @@
     "* Blue - Active guard shift\n",
     "* Red - Guard sleeping\n",
     "* Yellow - Answer #1\n",
-    "* Purple - Answer #2"
+    "* Purple - Answer #2\n",
+    "\n",
+    "(colors don't work in Github so view here: https://nbviewer.jupyter.org/github/twvd/adventofcode-2018/blob/master/4.ipynb)"
    ]
   },
   {
